2010-12-15  Douglas Bates  <bates@stat.wisc.edu>

	* src/MatrixNs.cpp: the SEXP() operator on chmSp just returns the
	S4 object when available (same with chmFr).

2010-12-14  Douglas Bates  <bates@stat.wisc.edu>

	* src/Module.cpp, src/MatrixNs.h, src/MatrixNs.cpp, NAMESPACE:
	export the chmSp class and wrap the chmFr class.

2010-12-13  Douglas Bates  <bates@stat.wisc.edu>

	* src/reModule.h, src/reModule.cpp, src/Module.cpp: Export Lind,
	declare setTheta to throw an exception.

	* src/MatrixNs.h, src/MatrixNs.cpp: Reinstate data member S4 d_xp
	in chmSp and chmFr to protect the contents of the S4 object used
	to create the C++ object.

	* src/Permutation.cpp: use sugar expression for creating 0-based
	indices.

2010-12-10  Douglas Bates  <bates@stat.wisc.edu>

	* src/merMod.h: use newly created wrap templated functions instead
	of the sexp method for chmFr and chmSp objects.

	* src/MatrixNs.h, src/MatrixNs.cpp: wrap the chmSp class, remove
	members d_xp and methods sexp and S4.

	* src/Module.cpp: Added properties to reModule and deFeMod.

2010-12-09  Douglas Bates  <bates@stat.wisc.edu>

	* src/MatrixNs.h, src/MatrixNs.cpp: Extended operator SEXP() methods.

	* src/reModule.h, src/reModule.cpp, src/Module.cpp, src/merMod.h:
	change name of reModule::updateLambda to reModule::setTheta, cache
	the current value of theta and incorporate it as a read-write
	property in the C++Class.

2010-12-08  Douglas Bates  <bates@stat.wisc.edu>

	* src/reModule.h, src/reModule.cpp: Remove cached value of sqrLenU
	and calculate it on the fly.  (That way you don't need to worry
	about whether the cached value is updated every time.)

	* src/Module.cpp: add reModule and reTrms classes.

	* src/reTrms.cpp: Uncomment sugar formulations (had been
	suppressed before Rcpp_0.8.3 was released).

2010-12-07  Douglas Bates  <bates@stat.wisc.edu>

	* src/MatrixNs.cpp, src/MatrixNs.h, src/feModule.h,
	src/Module.cpp, src/PredModules.h, NAMESPACE: With Romain's help